--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,31 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
+
 <body>
-    <h1>Under Maintenance</h1>
+    <div class="calculator">
+        <div class="display">0</div>
+        <div class="buttons">
+            <button class="gray_c">C</button>
+            <button class="gray_mod">%</button>
+            <button class="orange">÷</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button class="orange">×</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button class="orange">-</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button class="orange">+</button>
+            <button class="zero">0</button>
+            <button>.</button>
+            <button class="orange">=</button>
+        </div>
+    </div>
 </body>
+
 </html>
