Added Javascript for calculation logic

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <div class="display">0</div>
         <div class="buttons">
             <button class="gray_c">C</button>
+            <button><<</button>
             <button class="gray_mod">%</button>
             <button class="orange">÷</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button class="orange">×</button>
+            <button class="orange">x</button>
             <button>4</button>
             <button>5</button>
             <button>6</button>
